--- a/index.html
+++ b/index.html
@@ -18,27 +18,8 @@
         <caption>
           Понедельник 28 октября
         </caption>
-
         <tr>
-          <td class="info">№ пары</td>
-          <td class="info">Дисциплина</td>
-          <td class="info">Преподаватель</td>
-          <td class="info">Формат проведения</td>
-          <td class="info">Кабинет</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>ПОПД</td>
-          <td>Вельможная И.В.</td>
-          <td>Практическое занятие</td>
-          <td>33</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>Основы проектирования <br />баз данных</td>
-          <td>Глинчиков К.Е.</td>
-          <td>Практическое занятие</td>
-          <td>18</td>
+          <td class="info">Отдыхаем</td>
         </tr>
       </table>
       <table class="Tuesday">
@@ -53,25 +34,18 @@
           <td class="info">Кабинет</td>
         </tr>
         <tr>
-          <td>1</td>
-          <td>Элементы высшей математики</td>
-          <td>Слесарев В.В.</td>
+          <td>6</td>
+          <td>Архитектура <br />аппаратных средств</td>
+          <td>Мартин А.Э.</td>
           <td>Потоковая лекция</td>
-          <td>26</td>
+          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
         </tr>
         <tr>
-          <td>2</td>
-          <td>Операционные системы и <br />среды</td>
-          <td>Касаткина А.С.</td>
+          <td>7</td>
+          <td>Архитектура <br />аппаратных средств</td>
+          <td>Мартин А.Э.</td>
           <td>Потоковая лекция</td>
-          <td>47</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>ПОПД</td>
-          <td>Вельможная И.В.</td>
-          <td>Потоковая лекция</td>
-          <td>38</td>
+          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
         </tr>
       </table>
       <table class="Wednesday">
@@ -87,31 +61,24 @@
         </tr>
         <tr>
           <td>2</td>
-          <td>Архитектура <br />аппаратных средств</td>
-          <td>Мартин А.Э.</td>
-          <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
+          <td>Физическая культура</td>
+          <td>Матухно Е.В.</td>
+          <td>Практическое занятие</td>
+          <td>1</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>Архитектура <br />аппаратных средств</td>
-          <td>Мартин А.Э.</td>
-          <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
+          <td>Английский язык в профессиональной деятельности</td>
+          <td>Ткаченко С.В.</td>
+          <td>Практическое занятие</td>
+          <td>44</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>Архитектура <br />аппаратных средств</td>
-          <td>Мартин А.Э.</td>
-          <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Архитектура <br />аппаратных средств</td>
-          <td>Мартин А.Э.</td>
-          <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/155308494">СДО</a></td>
+          <td>Основы проектирования <br />баз данных</td>
+          <td>Глинчиков К.Е.</td>
+          <td>Практическое занятие</td>
+          <td>18</td>
         </tr>
       </table>
       <table class="Thursday">
@@ -137,7 +104,7 @@
           <td>Элементы высшей математики</td>
           <td>Слесарев В.В.</td>
           <td>Практическое занятие</td>
-          <td>24</td>
+          <td>22</td>
         </tr>
       </table>
       <table class="Friday">
@@ -152,18 +119,11 @@
           <td class="info">Кабинет</td>
         </tr>
         <tr>
-          <td>3</td>
-          <td>Элементы высшей математики</td>
-          <td>Слесарев В.В.</td>
-          <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/2016452222">СДО</a></td>
-        </tr>
-        <tr>
           <td>4</td>
-          <td>Операционные системы и <br />среды</td>
-          <td>Касаткина А.С.</td>
+          <td>Основы алгоритмизации <br />и программирования</td>
+          <td>Кубрин Э.В.</td>
           <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/2035949835">СДО</a></td>
+          <td><a href="https://my.mts-link.ru/j/Ranepa/722232556">СДО</a></td>
         </tr>
         <tr>
           <td>5</td>
@@ -174,10 +134,17 @@
         </tr>
         <tr>
           <td>6</td>
-          <td>Основы алгоритмизации <br />и программирования</td>
-          <td>Кубрин Э.В.</td>
+          <td>Операционные системы и <br />среды</td>
+          <td>Касаткина А.С.</td>
           <td>Потоковая лекция</td>
-          <td><a href="https://my.mts-link.ru/j/Ranepa/722232556">СДО</a></td>
+          <td><a href="https://my.mts-link.ru/j/Ranepa/2035949835">СДО</a></td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Операционные системы и <br />среды</td>
+          <td>Касаткина А.С.</td>
+          <td>Потоковая лекция</td>
+          <td><a href="https://my.mts-link.ru/j/Ranepa/2035949835">СДО</a></td>
         </tr>
       </table>
       <table class="Saturday">
@@ -196,20 +163,20 @@
           <td>Архитектура <br />аппаратных средств</td>
           <td>Мартин А.Э.</td>
           <td>Практическое занятие</td>
-          <td>45</td>
+          <td>39</td>
         </tr>
         <tr>
           <td>3</td>
           <td>Основы алгоритмизации <br />и программирования</td>
           <td>Кубрин Э.В.</td>
           <td>Практическое занятие</td>
-          <td>45</td>
+          <td>15</td>
         <tr>
           <td>4</td>
-          <td>Английский язык в профессиональной деятельности</td>
-          <td>Ткаченко С.В.</td>
+          <td>Физическая культура</td>
+          <td>Матухно Е.В.</td>
           <td>Практическое занятие</td>
-          <td>506</td>
+          <td>1</td>
         </tr>
         </tr>
       </table>
