--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header>РАСПИСАНИЕ</header>
       <table class="Monday">
         <caption>
-          Понедельник 28 октября
+          Понедельник 4 ноября
         </caption>
         <tr>
           <td class="info">Отдыхаем</td>
@@ -24,7 +24,7 @@
       </table>
       <table class="Tuesday">
         <caption>
-          Вторник 29 октября
+          Вторник 5 ноября
         </caption>
         <tr>
           <td class="info">№ пары</td>
@@ -50,7 +50,7 @@
       </table>
       <table class="Wednesday">
         <caption>
-          Среда 30 октября
+          Среда 6 ноября
         </caption>
         <tr>
           <td class="info">№ пары</td>
@@ -83,7 +83,7 @@
       </table>
       <table class="Thursday">
         <caption>
-          Четверг 31 октября
+          Четверг 7 ноября
         </caption>
         <tr>
           <td class="info">№ пары</td>
@@ -109,7 +109,7 @@
       </table>
       <table class="Friday">
         <caption>
-          Пятница 1 ноября
+          Пятница 8 ноября
         </caption>
         <tr>
           <td class="info">№ пары</td>
@@ -149,7 +149,7 @@
       </table>
       <table class="Saturday">
         <caption>
-          Суббота 2 ноября
+          Суббота 9 ноября
         </caption>
         <tr>
           <td class="info">№ пары</td>
